# InsightCore

./: CMakeLists.txt  LICENSE  README.md  config.json
include/: ConfigLoader.hpp
include/core/: BasicRiskManager.hpp  Candle.hpp  IRiskManager.hpp  IStrategy.hpp  RsiEmaStrategy.hpp  SignalResult.hpp  TradeEngine.hpp
src/: BasicRiskManager.cpp  ConfigLoader.cpp  RsiEmaStrategy.cpp  TradeEngine.cpp  main.cpp
